--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>sterregovaert@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -895,9 +895,9 @@
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>Sterre</span></strong>. All Rights Reserved
-      </div>
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
