--- a/index.html
+++ b/index.html
@@ -968,17 +968,17 @@
   <footer id="footer">
     <div class="container">
       <h3>Sterre</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
+      <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <!-- <div class="copyright">
-        &copy; Copyright <strong><span>Sterre</span></strong>. All Rights Reserved
       </div> -->
+      <div class="copyright">
+        &copy; Copyright <strong><span>Sterre</span></strong>. All Rights Reserved
+      </div>
+      <a href="privacy.html">Privacy Policy</a>
     </div>
   </footer><!-- End Footer -->
 
