--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <!-- End About Section -->
 
     <!-- ======= Skills section ======= -->
-     <section id="skills" class="skills">
+    <section id="skills" class="skills">
       <div class="container">
 
         <ul class="nav nav-tabs row d-flex">
@@ -223,26 +223,40 @@
           <div class="tab-pane active show" id="tab-1">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-                <p class="font-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore
-                  magna aliqua.
+                <h3>Web development</h3>
+                <p class="skillTxt">
+                  Html5
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
+                  Css
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
+                  sass
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
+                  javascript
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
+                  c# - .net
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
+                  php
+                  <div class="c-progressBar u-width-100percent">
+                    <div class="c-progressBar--progress u-width-50percent"></div>
+                  </div>
                 </p>
-                <ul>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.
-                  </li>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                    pariatur.</li>
-                </ul>
+                <h3>Programming & OS's</h3>
                 <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                  voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                  sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
+                  java
+                  python
+                  sql
+                  linux
+                  windows
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -343,9 +357,9 @@
           </div>
         </div>
 
-      </div> 
+      </div>
     </section>
-    
+
     <!-- End Skills section -->
 
     <!-- ======= Features Section ======= -->
