--- a/index.html
+++ b/index.html
@@ -224,32 +224,32 @@
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3>Web development</h3>
-                <p class="skillTxt">
-                  Html5
+                <div class="skillTxt">
+                  <span>Html5 </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                  Css
+                  <span>Css </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                  sass
+                  <span>sass </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                  javascript
+                  <span>javascript </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                  c# - .net
+                  <span>c# - .net </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                  php
+                  <span>php </span>
                   <div class="c-progressBar u-width-100percent">
                     <div class="c-progressBar--progress u-width-50percent"></div>
                   </div>
-                </p>
+                </div>
                 <h3>Programming & OS's</h3>
                 <p>
                   java
