--- a/index.html
+++ b/index.html
@@ -198,19 +198,19 @@
           <ul class="nav nav-tabs row d-flex">
             <li class="nav-item col-3" data-aos="zoom-in">
               <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-                <i class="ri-gps-line"></i>
+                <i class="ri-computer-line"></i>
                 <h4 class="d-none d-lg-block">Computer skills</h4>
               </a>
             </li>
             <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
               <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-                <i class="ri-body-scan-line"></i>
+                <i class="ri-brush-2-fill"></i>
                 <h4 class="d-none d-lg-block">Design skills</h4>
               </a>
             </li>
             <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
               <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-                <i class="ri-sun-line"></i>
+                <i class="ri-edit-circle-line"></i>
                 <h4 class="d-none d-lg-block">Other</h4>
               </a>
             </li>
@@ -313,7 +313,7 @@
                   <div class="skillTxt">
                     <span>Adobe After Effects</span>
                     <div class="c-progressBar u-width-100percent">
-                      <div class="c-progressBar--progress u-width-30percent"></div>
+                      <div class="c-progressBar--progress u-width-5percent"></div>
                     </div> 
                     <span>Adobe Premier</span>
                     <div class="c-progressBar u-width-100percent">
@@ -340,23 +340,11 @@
               <div class="row">
                 <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                   <div class="skillTxt">
-                    <span>Driving License ??</span>
+                    <span>Driving License B</span>
                     <div class="c-progressBar u-width-100percent">
-                      <div class="c-progressBar--progress u-width-95percent"></div>
+                      <div class="c-progressBar--progress u-width-0percent"></div>
                     </div> 
                     <span>Microsoft Office</span>
-                    <div class="c-progressBar u-width-100percent">
-                      <div class="c-progressBar--progress u-width-5percent"></div>
-                    </div> 
-                    <span>sql</span>
-                    <div class="c-progressBar u-width-100percent">
-                      <div class="c-progressBar--progress u-width-5percent"></div>
-                    </div> 
-                    <span>linux</span>
-                    <div class="c-progressBar u-width-100percent">
-                      <div class="c-progressBar--progress u-width-30percent"></div>
-                    </div> 
-                    <span>windows</span>
                     <div class="c-progressBar u-width-100percent">
                       <div class="c-progressBar--progress u-width-95percent"></div>
                     </div> 
