--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
                 <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
-                <h4 class="title"><a href="">Logo design</a></h4>
+                <h4 class="title"><a href="">Graphic & Design</a></h4>
                 <p class="description">I’ll professionally design a logo for your business, with multiple concepts and
                   revisions until your brand vision is complete.</p>
               </div>
@@ -394,7 +394,7 @@
             <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
                 <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
-                <h4 class="title"><a href="">Video editing</a></h4>
+                <h4 class="title"><a href="">Video & Animation</a></h4>
                 <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                   fugiat nulla pariatur</p>
               </div>
@@ -402,7 +402,7 @@
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
                 <div class="icon"><i class="las la-list" style="color:#000000;"></i></div>
-                <h4 class="title"><a href="">Music</a></h4>
+                <h4 class="title"><a href="">Music & Audio</a></h4>
                 <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt
                   mollit anim id est laborum</p>
@@ -412,7 +412,7 @@
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
                 <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
-                <h4 class="title"><a href="">Nemo Enim</a></h4>
+                <h4 class="title"><a href="">Programming & Tech</a></h4>
                 <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                   praesentium voluptatum deleniti atque</p>
               </div>
@@ -420,7 +420,7 @@
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
                 <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
-                <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+                <h4 class="title"><a href="">Digital Marketing</a></h4>
                 <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
                   soluta nobis est eligendi</p>
               </div>
