--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="icon-box" data-aos="zoom-in-left">
-                <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Creating a website for your business</a></h4>
                 <p class="description">Thinking of getting a website for your business? You are at the right place. Here
                   you can choose from 3 packages according to your needs. The sites will be unique, mobile-friendly, SEO
@@ -384,7 +384,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
-                <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Graphic & Design</a></h4>
                 <p class="description">I’ll professionally design a logo for your business, with multiple concepts and
                   revisions until your brand vision is complete.</p>
@@ -393,7 +393,7 @@
 
             <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
-                <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Video & Animation</a></h4>
                 <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                   fugiat nulla pariatur</p>
@@ -401,7 +401,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
-                <div class="icon"><i class="las la-list" style="color:#000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color:#000000;"></i></div> -->
                 <h4 class="title"><a href="">Music & Audio</a></h4>
                 <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt
@@ -411,7 +411,7 @@
 
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
-                <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Programming & Tech</a></h4>
                 <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                   praesentium voluptatum deleniti atque</p>
@@ -419,7 +419,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
-                <div class="icon"><i class="las la-list" style="color: #000000;"></i></div>
+                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Digital Marketing</a></h4>
                 <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
                   soluta nobis est eligendi</p>
