skill section, contact

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
             </li>
             <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
               <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
+                <i class="ri-global-line"></i>
+                <h4 class="d-none d-lg-block">Languages</h4>
+              </a>
+            </li>
+            <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
+              <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
                 <i class="ri-edit-circle-line"></i>
                 <h4 class="d-none d-lg-block">Other</h4>
               </a>
@@ -335,6 +341,34 @@
               <div class="row">
                 <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                   <div class="skillTxt">
+                    <span>Dutch</span>
+                    <div class="c-progressBar u-width-100percent">
+                      <div class="c-progressBar--progress u-width-95percent"></div>
+                    </div>
+                    <span>English</span>
+                    <div class="c-progressBar u-width-100percent">
+                      <div class="c-progressBar--progress u-width-95percent"></div>
+                    </div>
+                    <span>French</span>
+                    <div class="c-progressBar u-width-100percent">
+                      <div class="c-progressBar--progress u-width-75percent"></div>
+                    </div>
+                    <span>German</span>
+                    <div class="c-progressBar u-width-100percent">
+                      <div class="c-progressBar--progress u-width-20percent"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center">
+                  <img src="assets/img/features-3.png" alt="" class="img-fluid">
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane" id="tab-4">
+              <div class="row">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+                  <div class="skillTxt">
                     <span>Driving License B</span>
                     <div class="c-progressBar u-width-100percent">
                       <div class="c-progressBar--progress u-width-0percent"></div>
@@ -346,7 +380,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                  <img src="assets/img/features-3.png" alt="" class="img-fluid">
+                  <img src="assets/img/features-4.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -455,8 +489,7 @@
                 <p>App</p>
                 <a href="assets/img/work/work-1.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -467,8 +500,7 @@
                 <p>Web</p>
                 <a href="assets/img/work/work-2.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -479,8 +511,7 @@
                 <p>App</p>
                 <a href="assets/img/work/work-3.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -491,8 +522,7 @@
                 <p>Card</p>
                 <a href="assets/img/work/work-4.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -503,8 +533,7 @@
                 <p>Web</p>
                 <a href="assets/img/work/work-5.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -515,8 +544,7 @@
                 <p>App</p>
                 <a href="assets/img/work/work-6.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -527,8 +555,7 @@
                 <p>Card</p>
                 <a href="assets/img/work/work-7.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -539,8 +566,7 @@
                 <p>Card</p>
                 <a href="assets/img/work/work-8.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -551,8 +577,7 @@
                 <p>Web</p>
                 <a href="assets/img/work/work-9.jpg" data-gall="workGallery" class="venobox preview-link"
                   title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="work-details.html" class="details-link" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="work-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
@@ -590,13 +615,13 @@
                   </div>
                 </a>
 
-                <a href="callto:+32486436056">
+                <!-- <a href="callto:+32486436056">
                   <div class="phone">
                     <i class="icofont-phone"></i>
                     <h4>Call:</h4>
                     <p>(+32) 0486 43 60 56</p>
                   </div>
-                </a>
+                </a> -->
 
               </div>
 
