--- a/index.html
+++ b/index.html
@@ -628,6 +628,13 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
+              <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSc6bvYIwOXIwLgYhisH1ThbP-y3ehoU0e5SUVzXZ9N7DK8VFQ/viewform?embedded=true"
+                width="640" height="995" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
+
+
+            <!-- <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
 
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row">
@@ -660,7 +667,7 @@
                 <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
 
-            </div>
+            </div> -->
 
           </div>
 
