--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                  <img src="assets/img/features-1.png" alt="" class="img-fluid">
+                  <img src="assets/img/skills-1.svg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
 
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                  <img src="assets/img/features-2.png" alt="" class="img-fluid">
+                  <img src="assets/img/skills-2.svg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -360,7 +360,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                  <img src="assets/img/features-3.png" alt="" class="img-fluid">
+                  <img src="assets/img/skills-3.svg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -380,7 +380,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                  <img src="assets/img/features-4.png" alt="" class="img-fluid">
+                  <img src="assets/img/skills-4.svg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
