--- a/index.html
+++ b/index.html
@@ -428,35 +428,33 @@
             <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
                 <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Video & Animation</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                  fugiat nulla pariatur</p>
+                <h4 class="title"><a href="">Video & Animation (Still learning)</a></h4>
+                <p class="description">I can edit videos for you business.
+                </p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
                 <!-- <div class="icon"><i class="las la-list" style="color:#000000;"></i></div> -->
-                <h4 class="title"><a href="">Music & Audio</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                  deserunt
-                  mollit anim id est laborum</p>
+                <h4 class="title"><a href="">Music & Audio (Still learning)</a></h4>
+                <p class="description">If you're looking a beat for a radio hit, background music for your video, or a
+                  track for other commercial purposes, you came to the right place.</p>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
                 <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Programming & Tech</a></h4>
-                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                  praesentium voluptatum deleniti atque</p>
+                <h4 class="title"><a href="">Programming & Tech (Still learning)</a></h4>
+                <p class="description">If you have java, javascript Programming Projects that are holding you back
+                  from other pieces of work, you came to the right place.</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mt-5">
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
                 <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Digital Marketing</a></h4>
-                <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-                  soluta nobis est eligendi</p>
+                <h4 class="title"><a href="">Other (Still learning)</a></h4>
+                <p class="description">...</p>
               </div>
             </div>
           </div>
