work, little about

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               Information Technology at HoGent.
               I am tranquil and motivated 17-year-old programmer with a wide range of skills and technical interests.
               When
-              I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning,
+              I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning, chess,
               gaming.
             </p>
             <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
@@ -170,7 +170,7 @@
                 Information Technology at HoGent.
                 I am tranquil and motivated 17-year-old programmer with a wide range of skills and technical interests.
                 When
-                I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning,
+                I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning, chess,
                 gaming.
               </p>
             </div>
@@ -429,7 +429,7 @@
               <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
                 <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
                 <h4 class="title"><a href="">Video & Animation (Still learning)</a></h4>
-                <p class="description">I can edit videos for you business.
+                <p class="description">I can edit videos for your business.
                 </p>
               </div>
             </div>
